force-app/main/default/objects/StudentTeacherDetails__c/StudentTeacherDetails__c.object-meta.xml
<CustomObject>
    <label>StudentTeacherDetails</label>
    <nameField>
        <displayFormat>ST{0000}</displayFormat>
        <label>StudentTeacherDetailsId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>StudentTeacherDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>