force-app/main/default/objects/StudentTeacherDetails__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <length>200</length>
    <type>Text</type>
</CustomField>