force-app/main/default/objects/StudentTeacherDetails__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <label>Marks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>