force-app/main/default/objects/StudentTeacherDetails__c/fields/Student_Father_name__c.field-meta.xml
<CustomField>
    <fullName>Student_Father_name__c</fullName>
    <label>Student Father name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>