force-app/main/default/objects/StudentTeacherDetails__c/fields/Student_Grade__c.field-meta.xml
<CustomField>
    <fullName>Student_Grade__c</fullName>
    <label>Student Grade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>