force-app/main/default/objects/StudentTeacherDetails__c/fields/Student_Language__c.field-meta.xml
<CustomField>
    <fullName>Student_Language__c</fullName>
    <label>Student Language</label>
    <length>200</length>
    <type>Text</type>
</CustomField>