force-app/main/default/objects/StudentTeacherDetails__c/fields/Student_Mother_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Mother_Name__c</fullName>
    <label>Student Mother Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>