force-app/main/default/objects/StudentTeacherDetails__c/fields/Student_Rank__c.field-meta.xml
<CustomField>
    <fullName>Student_Rank__c</fullName>
    <label>Student Rank</label>
    <length>10</length>
    <type>Text</type>
</CustomField>