force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_City__c.field-meta.xml
<CustomField>
    <fullName>Teacher_City__c</fullName>
    <label>Teacher City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>