force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_Country__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Country__c</fullName>
    <label>Teacher Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>