force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_Deal_Subj__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Deal_Subj__c</fullName>
    <label>Teacher Deal Subj</label>
    <length>200</length>
    <type>Text</type>
</CustomField>