force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <label>Teacher Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>