force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Qualification__c</fullName>
    <label>Teacher Qualification</label>
    <length>200</length>
    <type>Text</type>
</CustomField>