force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_Salary__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Salary__c</fullName>
    <label>Teacher Salary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>