force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_State__c.field-meta.xml
<CustomField>
    <fullName>Teacher_State__c</fullName>
    <label>Teacher State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>