force-app/main/default/objects/StudentTeacherDetails__c/fields/Teacher_Street__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Street__c</fullName>
    <label>Teacher Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>